RESOLVED FIXED300907
Jupyter notebook with long lines of result text hangs for multiple minutes
https://bugs.webkit.org/show_bug.cgi?id=300907
Summary Jupyter notebook with long lines of result text hangs for multiple minutes
alan
Reported 2025-10-16 10:58:16 PDT
Attachments
[fast-cq]Patch (12.51 KB, patch)
2025-10-16 11:08 PDT, alan
no flags
alan
Comment 1 2025-10-16 11:08:40 PDT
Created attachment 477105 [details] [fast-cq]Patch
EWS
Comment 2 2025-10-16 14:00:50 PDT
Committed 301657@main (beff8758f9a0): <https://commits.webkit.org/301657@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477105 [details].
Note You need to log in before you can comment on or make changes to this bug.